<resources>
    <string name="app_name">Hosteloha</string>
    <string name="app_nick_name">Hosto</string>
    <string name="app_domain">https://hosteloha.com/</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_welcome">Welcome to Hosteloha</string>

    <!-- Navigation Menu -->
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Refer &amp; Earn</string>
    <string name="menu_legal">Legal</string>
    <string name="menu_rate">Rate our App</string>
    <string name="menu_send">Send</string>
    <string name="menu_seller">Seller</string>
    <string name="menu_buyer">Buyer</string>
    <string name="menu_user_account"> My Account</string>
    <string name="menu_user_notifications"> My Notifications</string>
    <string name="menu_payment_info">Payment</string>
    <string name="menu_app_settings">Setting</string>
    <string name="menu_app_info">About</string>
    <string name="menu_more">More</string>

    <!-- Snack Bar -->
    <string name="snackbar_exit_message">Hosteloha misses you</string>
    <string name="snackbar_exit_button">EXIT</string>

    <!--Dialog Button's-->
    <string name="button_cancel">cancel</string>
    <string name="button_decline">decline</string>
    <string name="button_accept">accept</string>

    <!-- Static data -->
    <string name="otp_sent_variable_phone">OTP Sent to %1$s</string>

    <string name="channel_name">hosteloha_notification</string>

    <!-- Authentication Page -->
    <string name="channel_description">hosteloha_chanel_description</string>
    <string name="product_cp_value">&#160;₹%1$d&#160;</string>
    <string name="product_sp_value">₹%1$d</string>

    <!-- My Account -->
    <string name="account_followers">Followers</string>
    <string name="account_following">Following</string>
    <string name="btn_follow">FOLLOW</string>
    <string name="btn_following">FOLLOWING</string>

    <!-- Product -->
    <string name="product_discount_value">%1$d%%</string>
    <string name="hello_blank_fragment"> Hello  Blank Fragment</string>
    <string name="fragment_refer_description"> Hi Tony, Invite your friends to have a amazing Hostelohic experience and earn instant wallet cash of ₹50, when they do their first transaction</string>
    <string name="fragment_purchases">My Purchases</string>
    <string name="fragment_bids">My Bids</string>
    <string name="fragment_watchlist">My Watchlist</string>
    <string name="fragment_analytics">Seller Analytics</string>
    <string name="fragment_edit_details">Account Details</string>
    <string name="fragment_edit_address">Address Details</string>
    <string name="fragment_reviews">My Reviews</string>
    <string name="fragment_drafts">To be Published</string>
    <string name="menu_filter">Filter Type</string>
    <string name="menu_sort">Sorting Type</string>
    <string name="app_version">Version %1$s</string>

    <!-- DEV Page URL's-->
    <string name="dev_vinay_linkedin">https://www.linkedin.com/in/vinay-kumar-p-422b32123/</string>
    <string name="dev_vinay_email">vinaykumarp987@gmail.com</string>
    <string name="dev_vinay_github">https://github.com/Vinaypolimera</string>

    <string name="dev_srinivas_linkedin">https://www.linkedin.com/in/srinivas-polimera-a9385b68/</string>
    <string name="dev_srinivas_email">srinivasu1995@gmail.com</string>
    <string name="dev_srinivas_github">https://github.com/srinivas013</string>

    <string name="dev_suhaas_linkedin">https://www.linkedin.com/in/suhaassrinivas</string>
    <string name="dev_suhaas_email">https://suhaas-livcd.github.io</string>
    <string name="dev_suhaas_github">https://github.com/suhaas-livcd/</string>

    <!-- Home Categories -->
    <string name="category_beauty">Beauty</string>
    <string name="category_books">Books</string>
    <string name="category_electronics">Electronics</string>
    <string name="category_fashion">Fashion</string>
    <string name="category_music">Music</string>
    <string name="category_project">Projects</string>
    <string name="category_rent">Rent Gear</string>
    <string name="category_sports">Sports</string>
    <string name="category_vehicle">Vehicles</string>

    <!-- Showing array in seller category chooser -->
    <string-array name="product_categories">
        <item>Books</item>
        <item>Business &amp; Industrial</item>
        <item>Clothing</item>
        <item>Shoes &amp; Accessories</item>
        <item>Collectibles</item>
        <item>Consumer Electronics</item>
        <item>Crafts</item>
        <item>Dolls &amp; Bears</item>
        <item>Home &amp; Garden</item>
        <item>Motors</item>
        <item>Pet Supplies</item>
        <item>Sporting Goods</item>
        <item>Sports Mem</item>
        <item>Cards &amp; Fan Shop</item>
        <item>Toys &amp; Hobbies</item>
        <item>Antiques</item>
        <item>Computers/Tablets &amp; Networking</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="product_condition">
        <item>Brand New</item>
        <item>Like New</item>
        <item>Very Good</item>
        <item>Good</item>
        <item>Acceptable</item>
    </string-array>
</resources>
